--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@ html {
   box-sizing: border-box;
   background-color: #f2f1ed;
   font-family: Georgia, serif;
+  line-height: 1.5;
+  margin: 1rem;
 }
 
 *,
@@ -12,6 +14,8 @@ html {
 
 img {
   width: 100%;
+  grid-template-areas: "banner";
+  grid-area: banner;
 }
 
 header {
@@ -26,8 +30,9 @@ main {
 body {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr auto;
   gap: 1rem;
+  margin: 0;
 }
 
 h1 {
@@ -36,7 +41,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  margin: 1rem;
+  margin-bottom: 1.2rem;
 }
 
 header img, nav, h1 {
@@ -52,7 +57,8 @@ nav ul {
   display: flex;
   justify-content: flex-end;
   list-style-type: none;
-  font-family: "Patua One", cursive;
+  font-family: "Patua One", sans-serif;
+  margin-right: 5rem;
 }
 
 a {
@@ -63,7 +69,9 @@ a {
 li {
   padding: 1rem;
 }
+
 h2 {
-  font-family: "Patua One", cursive;
+  font-family: "Patua One", sans-serif;
   color: #30658d;
+  margin: .1rem 0;
 }
